# ddaq

./: README.md  README.md~  daq.cpp  daq.h  dcom.pro  ddaq.pro  ddaq.pro.user.3a8b883  ddaq.pro.user.d0d7948  doffline.pro  donline.pro  donline.pro.user.3a8b883  donlineqt.pro  dpp.cpp  dpp.h  keyb.cpp  keyb.h  main.cpp  main_dcom.cpp  main_donline.cpp  mainwindow.h  mainwindow.ui  mysignalhandler.cpp  mysignalhandler.h
build-danalysisserver-Desktop-Debug/: Makefile  danalysisserver  randCircle.C
build-dcom-Desktop-Debug/: Makefile  dcom
build-ddaq-Desktop-Debug/: Makefile  ddaq  m1.conf~
build-dnetclient-Desktop-Debug/: Makefile  dnetclient
build-dnetserver-Desktop-Debug/: Makefile  dnetserver
build-doffline-Desktop-Debug/: Makefile  doffline
build-donline-Desktop-Debug/: Makefile  briken_mapping.txt  donline
build-donlineqt-Qt4_8-Debug/: Makefile  donlineqt  moc_frame.cpp  moc_mainwindow.cpp  ui_frame.h  ui_mainwindow.h
build-offlineanalysis-Desktop-Debug/: Makefile  offlineanalysis
danalysisserver/: danalysisserver.pro  danalysisserver.pro.user.18  main.cpp  randCircle.cpp
ddaq/: daq.cpp  daq.h  daq_class.cpp  daq_class.h  dcom.pro  dcom.pro.user.18  ddaq.pro  ddaq.pro.user.18  doffline.pro  doffline.pro.user.18  donline.pro.user.18  donlineqt.pro  keyb.cpp  keyb.h  main_dcom.cpp  main_donline.cpp  main_donline.cpp~  main_offline .cpp_1ch  main_offline.cpp  main_offline.cpp_2ch  mainwindow.cpp  mainwindow.ui  randcircle.cpp  randcircle.h
ddaq/donlineqt/: donlineqt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
ddaq/offlineanalysis/: offlineanalysis.pro
ddaq_earth/: CMakeLists.txt  CMakeLists.txt.user.94b9503.4.8-pre1  CMakeLists.txt.user.c52e928  CMakeLists.txt.user.c52e928.22  aliases.sh  daq_select  datasink.cc  datasink.cc_bak  datasink_multicorewrite.cc  datasink_nomulticore.cc  elogtest.cc  onlinetest.cc  rcdaq_client.cc  rcdaq_original_zmq.cc  rcdaq_original_zmq.h  rcdaq_server.cc  resource1.txt  resource2.txt
ddaq_earth/include/: daqBuffer.h  deviceblock.h  rcdaq.h  rcdaq_plugin.h
ddaq_earth/src/: daqBuffer.cc  rcdaq.cc
ddaq_earth_caenpadcplugin/: CMakeLists.txt  padcconfig.cc
ddaq_earth_caenpadcplugin/include/: caen_padc_lib.h  daq_device_caen_v1741.h
ddaq_earth_caenpadcplugin/src/: CAENdrs_plugin.cc  caen_padc_lib.cc  daq_device_caen_v1741.cc
ddaq_earth_caenplugin/: CMakeLists.txt  CMakeLists.txt.user.c52e928  caendppconfig.cc  cmdvmeA16.cc  cmdvmeA32.cc  dgtz_sendtrigger.cc  lupo.cc
ddaq_earth_caenplugin/include/: caen_dgtz_lib.h  caen_dgtz_pha_lib.h  caen_lib.h  daq_device_caen_v1730.h  daq_device_caen_v1730_dpppha.h  daq_device_caen_v1740raw.h  daq_device_caen_v1740zsp.h  daq_device_caenadc.h  daq_device_caentdc.h  daq_device_lupo.h  flash.h  lupo_lib.h
ddaq_earth_caenplugin/src/: CAENdrsTriggerHandler.cc  CAENdrs_plugin.cc  caen_dgtz_lib.cc  caen_dgtz_pha_lib.cc  caen_lib.cc  daq_device_caen_v1730.cc  daq_device_caen_v1730_dpppha.cc  daq_device_caen_v1740raw.cc  daq_device_caen_v1740zsp.cc  daq_device_caenadc.cc  daq_device_caentdc.cc  daq_device_lupo.cc  fft.cc  lupo_lib.cc
ddaq_earth_onlinelib/: CMakeLists.txt  CMakeLists.txt.user.c52e928  setup.sh  setuponline.sh  setuponlinee.sh
ddaq_earth_onlinelib/include/Event/: fileEventiterator.h  oncsCollection.h  oncsSubConstants.h  oncsSub_id4evt.h  oncsSub_idcaenv1730pha.h  oncsSub_idcaenv1742.h  oncsSub_idnodecode.h  rcdaqEventiterator.h
ddaq_earth_onlinelib/include/pmonitor/: pmonitorLinkDef.h
ddaq_earth_onlinelib/pmonitor_src/: pMutex.cc  pmonitor.cc
ddaq_earth_onlinelib/src/: buffer.cc  fileEventiterator.cc  oncsBuffer.cc  oncsEvent.cc  oncsSub_id4evt.cc  oncsSub_idcaenv1730pha.cc  oncsSub_idcaenv1742.cc  oncsSub_idnodecode.cc  oncsSubevent.cc  rcdaqEventiterator.cc
ddaq_earth_useranalysis/online_briken21_tssender/: CMakeLists.txt  daqmonitor.C  preparation
ddaq_earth_useranalysis/online_briken21_tssender/src/: myanalysis.cc
ddaq_earth_useranalysis/online_briken21_v1740zsp/src/: myanalysis.cc
ddaq_earth_useranalysis/online_hus_v1730_dpppha/: histosconfig.txt
ddaq_earth_useranalysis/online_hus_v1730_dpppha/src/: pdecoder.cc
devtools/CAENdrs2017/: daq_device_CAENdrs_std.cc
devtools/daqconfig2017/: daq_open1740.sh~  daqhistory04.txt~  m1740_0.txt  m1740_0.txt_bak  m1740_0.txt_thr_beforenov3  m1740_0_alldisable_wexttrg.txt~  m1740_0_allenable_noexttrg_shpt1.txt  m1740_0_allenable_noexttrg_shpt1_maxgain.txt  m1740_0_allenable_noexttrg_shpt3_maxgain.txt  m1740_0_allenabled.txt  m1740_0_allenabled_noexttrg.txt  m1740_0_briken1.txt~  m1740_0_nov13.txt  m1740_1.txt  m1740_1_shpt1.txt  m1740_3.txt~  m1740_3_baknov13.txt
devtools/daqconfig2019/: daq_keeprunning.sh  daq_keeprunning.sh~  daq_open1740.sh  daq_open1740.sh~  daq_openlupo.sh  daq_opentdc.sh  daqhistory04.txt  loadcaensingle.sh  m1740_0.txt  m1740_1.txt  m1740_2.txt  m1740_3.txt  m1740_3.txt_beforenov13  randomdevice.sh  resettimestamp_briken.sh
devtools/fifotest/: CMakeLists.txt  makefifos.cpp  viewfifos.cpp
devtools/lupoReadout/: caenvmeA32.cpp  caenvmeA32.h  lupoReadout.pro
devtools/rcdaqsender/: Makefile  myanalysis.cc
devtools/ribftspackage_20191013/SyncCheck/: Makefile  Makefile~  SyncCheck
devtools/ribftspackage_20191013/SyncCheckPhong/: #SyncCheck.cpp#  Makefile  Makefile~  SyncCheck  SyncCheck.cpp  SyncCheck.cpp~
devtools/rpc/: rcdaq_prog  rcdaq_rpc.h  rcdaq_rpc_clnt.c  rcdaq_rpc_svc.c  rcdaq_rpc_xdr.c  rpcprog.c
devtools/userana_tools/: dpp.cc  dpp.h
devtools/useranalysis/online2/: DataStruct_dict.C  myanalysis.cc  pdecoder_dict.C
devtools/useranalysis/online2_dgtzsynccheck/: DataStruct_dict.C  myanalysis.cc  myanalysis.cc~  pdecoder_dict.C  wasabi_timestamp2.txt
devtools/zmqtest/datasink/: CMakeLists.txt  CMakeLists.txt.user.94b9503.4.8-pre1  CMakeLists.txt.user.c52e928.22  daqread.cc  datasink.cc  online.cc
dnetclient/: dnetclient.pro  dnetclient.pro.user.18  main.cpp
dnetserver/: dnetserver.pro  dnetserver.pro.user.18  main.cpp
donlineqt/: donlineqt.pro  main_qt.cpp  mainwindow.cpp  mainwindow.ui
offlineanalysis/: main.cpp  main.cpp~  offlineanalysis.pro
(+1 files in other folders)
